--- a/src/style.scss
+++ b/src/style.scss
@@ -11,11 +11,41 @@
     justify-content: center;
     text-align: center;
 
+    input{
+        height: 30px;
+        width: 100vw;
+    }
+    button{
+        height: 30px;
+        width: 100vw;
+    }
     canvas{
         margin: auto;
         display: flex;
-        background: #fff;
+        background: #f9f9f9;
         width: 512px;
         height: 512px;
+    }
+}
+
+@media only screen 
+and (min-device-height: 320px) 
+and (max-device-height: 556px){
+    #container{
+        canvas{
+            width: 300px;
+            height: 300px;
+        }
+    }
+}
+
+@media only screen 
+and (min-device-width: 320px) 
+and (max-device-width: 556px){
+    #container{
+        canvas{
+            width: 300px;
+            height: 300px;
+        }
     }
 }
